--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,13 @@
-server {
-    listen 80;
-    server_name _;
+events { 
+    worker_connections 1024; 
+}
 
-    root /app; # Caminho para o diretório do projeto
-    index login.php;
+http {
+    server {
+        listen 80;
+        server_name _;
+
+        root /app;
+        index login.php;
+    }
 }
