--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,27 @@
-events { 
-    worker_connections 1024; 
-}
+server {
+    listen 80;
+    server_name _;
 
-http {
-    server {
-        listen 80;
-        server_name _;
+    # Define o diretório raiz do projeto
+    root /app;
+    index login.php index.php index.html;
 
-        root /app;
-        index login.php;
+    # Processar requisições PHP
+    location ~ \.php$ {
+        try_files $uri =404;
+        include fastcgi_params;
+        fastcgi_pass 127.0.0.1:9000; # Endereço do PHP-FPM
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+
+    # Configuração para arquivos estáticos (CSS, JS, etc.)
+    location / {
+        try_files $uri $uri/ =404;
+    }
+
+    # Bloqueia o acesso ao .htaccess (caso esteja sendo transferido para Nginx)
+    location ~ /\.ht {
+        deny all;
     }
 }
