--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,9 @@
 [phases.setup]
 commands = [
-  "apt-get update",
-  "apt-get install -y nginx"
+    "apt-get update",
+    "apt-get install -y nginx php-fpm php-cli"
 ]
 
 [static]
 buildOutput = "."
-startCommand = "nginx -g 'daemon off;' -c /app/nginx.conf"
+startCommand = "php-fpm && nginx -g 'daemon off;' -c /app/nginx.conf"
