--- a/nginx.conf
+++ b/nginx.conf
@@ -1,42 +1,46 @@
-worker_processes 1;
+# nginx.conf completo
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log;
+pid /run/nginx.pid;
 
 events {
     worker_connections 1024;
 }
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
+    include       mime.types;                  # Inclui o arquivo mime.types
+    default_type  application/octet-stream;    # Define o tipo MIME padrão
+    sendfile      on;
+    keepalive_timeout 65;
 
-    sendfile        on;
-
-    # Configuração de servidores
     server {
         listen 80;
-        server_name _;
+        server_name _;                         # Aceita qualquer domínio
 
-        # Define o diretório raiz do projeto
-        root /app;
-        index login.php index.php index.html;
+        root /app;                             # Diretório raiz do projeto
+        index login.php index.html index.htm;  # Arquivo inicial padrão
 
-        # Processar requisições PHP
+        # Configuração do diretório principal
+        location / {
+            try_files $uri $uri/ /login.php?$query_string;
+        }
+
+        # Configuração para processar arquivos .php
         location ~ \.php$ {
-            try_files $uri =404;
             include fastcgi_params;
-            fastcgi_pass 127.0.0.1:9000; # Endereço do PHP-FPM
+            fastcgi_pass 127.0.0.1:9000;       # Endereço do PHP-FPM
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
 
-        # Configuração para arquivos estáticos (CSS, JS, etc.)
-        location / {
-            try_files $uri $uri/ =404;
-        }
-
-        # Bloqueia o acesso ao .htaccess (caso esteja sendo transferido para Nginx)
+        # Protege arquivos ocultos (como .htaccess)
         location ~ /\.ht {
             deny all;
         }
     }
-}
 
+    # Logs de acesso e erro
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+}
